FPVTL-3100 making sure file format error trickles up to user